--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -84,7 +84,7 @@ os.chmod(p, 0o777) \n" | python
 RUN conda create -y -n benchmark python=3.7.10 \
  && echo ". /app/miniconda/etc/profile.d/conda.sh" >> ~/.bashrc \
  && echo "conda activate" >> ~/.bashrc \
- && source /root/.bashrc \
+ && . /root/.bashrc \
  && conda activate benchmark \
  && pip install -U "ray[rllib]" \
  && pip install torch==1.7.0 \
