--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -25,7 +25,6 @@ ENV PATH=/app/miniconda/bin:$PATH
 
 RUN pip install --no-cache-dir --upgrade pip
 
-RUN pip install --no-cache-dir torch==1.4.0 torchvision==0.5.0
 RUN apt-get update -q \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     curl \
@@ -68,10 +67,6 @@ ENV MUJOCO_PY_MUJOCO_PATH /app/.mujoco/mujoco200
 ARG GYM_REV=c33cfd8b2cc8cac6c346bc2182cd568ef33b8821
 
 ARG GYM_FEATURES='[mujoco]'
-RUN git clone https://github.com/openai/gym \
- && cd gym \
- && git reset --hard $GYM_REV \
- && pip --no-cache-dir install -e ."${GYM_FEATURES}"
 
 # we need to change the permissions of mujoco_py/generated because mujoco-py will fail if it can't modifiy this directory
 RUN printf "\
@@ -93,7 +88,13 @@ RUN conda create -y -n benchmark python=3.7.10 \
  && git clone https://github.com/openai/gym \
  && cd gym \
  && git reset --hard $GYM_REV \
- && pip --no-cache-dir install -e ."${GYM_FEATURES}"
+ && pip --no-cache-dir install -e ."${GYM_FEATURES}" \
+ && printf "\
+    try: import mujoco_py, os \n\
+    except: exit() \n\
+    p = os.path.join(os.path.dirname(mujoco_py.__file__), 'generated') \n\
+    print(p) \n\
+    os.chmod(p, 0o777) \n" | python
 
 ADD ./../../script /app/
 
