--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -24,10 +24,12 @@ WORKDIR /app
 
 RUN wget -O miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh \
   && bash miniconda.sh -b -p miniconda \
-  && rm miniconda.sh \
-  && which python
-
+  && rm miniconda.sh 
+  
+  
 ENV PATH=/app/miniconda/bin:$PATH
+
+RUN conda install python=3.7.10
 
 RUN pip install --no-cache-dir --upgrade pip
 
