--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -93,3 +93,5 @@ RUN pip --no-cache-dir install matplotlib
 RUN pip --no-cache-dir install wandb
 RUN pip install torch==1.7.0
 RUN pip install -U "ray[rllib]"
+
+ADD ./../../script/ /app/
