--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -91,5 +91,6 @@ os.chmod(p, 0o777) \n" | python
 
 RUN pip --no-cache-dir install matplotlib
 RUN pip --no-cache-dir install wandb
+RUN pip install --no-cache-dir torch==1.7.0
 RUN pip install -U "ray[rllib]"
 
