--- a/docker/benchmark/Dockerfile
+++ b/docker/benchmark/Dockerfile
@@ -10,3 +10,7 @@ RUN git clone https://github.com/pierthodo/rtrl.git \
 RUN git clone https://github.com/pierthodo/mbrl-lib.git \
   && cd /app/mbrl-lib \
   && pip install -e ".[dev]"
+
+RUN git clone https://github.com/danijar/dreamerv2.git \
+  && cd /app/dreamerv2 \
+  && pip install -e .
