--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:11.0-cudnn7-runtime-ubuntu16.04
+FROM nvidia/cuda:9.0-cudnn7-runtime-ubuntu16.04
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
@@ -93,5 +93,5 @@ RUN pip --no-cache-dir install wandb
 RUN pip install --no-cache-dir torch==1.7.0
 RUN pip install -U "ray[rllib]"
 RUN pip install dm_control
-RUN pip install tensorflow==2.4.2 tensorflow_probability==0.12.2 ruamel.yaml 
+# RUN pip install tensorflow==2.4.2 tensorflow_probability==0.12.2 ruamel.yaml 
 
