--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     zlib1g-dev \
     htop \
     tmux \
+    libopenmpi-dev \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 
