--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -99,3 +99,4 @@ RUN git clone https://github.com/openai/spinningup.git \
   && pip install -e .
 # RUN pip install tensorflow==2.4.2 tensorflow_probability==0.12.2 ruamel.yaml 
 
+RUN pip install --upgrade numpy
