--- a/docker/benchmark/Dockerfile
+++ b/docker/benchmark/Dockerfile
@@ -14,3 +14,15 @@ RUN git clone https://github.com/pierthodo/mbrl-lib.git \
 RUN git clone https://github.com/danijar/dreamerv2.git \
   && cd /app/dreamerv2 \
   && pip install -e .
+
+RUN git clone https://github.com/pierthodo/spinningup.git \
+  && cd /app/spinningup \
+  && pip install -e .
+# RUN pip install tensorflow==2.4.2 tensorflow_probability==0.12.2 ruamel.yaml 
+
+RUN git clone https://github.com/pierthodo/ray.gitt \
+  && cd /app/spinningup \
+  && pip install -e .
+
+
+RUN pip install --upgrade numpy
