--- a/docker/benchmark/Dockerfile
+++ b/docker/benchmark/Dockerfile
@@ -21,7 +21,7 @@ RUN git clone https://github.com/pierthodo/spinningup.git \
 # RUN pip install tensorflow==2.4.2 tensorflow_probability==0.12.2 ruamel.yaml 
 
 RUN git clone https://github.com/pierthodo/ray.gitt \
-  && cd /app/spinningup \
+  && cd /app/ray \
   && pip install -e .[rllib]
 
 
