--- a/docker/benchmark/Dockerfile
+++ b/docker/benchmark/Dockerfile
@@ -1,6 +1,12 @@
 ARG BASE
 FROM ${BASE}
 
+RUN pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-2.0.0.dev0-cp38-cp38-manylinux2014_x86_64.whl \
+  && git clone https://github.com/pierthodo/ray.git \
+  && cd /app/ray \
+  && git remote add upstream https://github.com/ray-project/ray.git \
+  && python python/ray/setup-dev.py
+
 
 RUN git clone https://github.com/pierthodo/rtrl.git \
   && cd /app/rtrl \
@@ -20,9 +26,6 @@ RUN git clone https://github.com/pierthodo/spinningup.git \
   && pip install -e .
 # RUN pip install tensorflow==2.4.2 tensorflow_probability==0.12.2 ruamel.yaml 
 
-RUN git clone https://github.com/pierthodo/ray.git \
-  && cd /app/ray \
-  && pip install -e .[rllib]
 
 
 RUN pip install --upgrade numpy
