--- a/docker/benchmark/Dockerfile
+++ b/docker/benchmark/Dockerfile
@@ -1,11 +1,15 @@
 ARG BASE
 FROM ${BASE}
 
+RUN git clone https://github.com/pierthodo/mbrl-lib.git \
+  && cd /app/mbrl-lib \
+  && pip install -e ".[dev]"
+
 RUN pip install -U ray[rllib] \
   && git clone https://github.com/pierthodo/ray.git \
   && cd /app/ray \
   && git remote add upstream https://github.com/ray-project/ray.git \
-  && python -y python/ray/setup-dev.py
+  && python python/ray/setup-dev.py -y
 
 
 RUN git clone https://github.com/pierthodo/rtrl.git \
@@ -13,9 +17,6 @@ RUN git clone https://github.com/pierthodo/rtrl.git \
   && pip --no-cache-dir install -e .
 
 
-RUN git clone https://github.com/pierthodo/mbrl-lib.git \
-  && cd /app/mbrl-lib \
-  && pip install -e ".[dev]"
 
 RUN git clone https://github.com/danijar/dreamerv2.git \
   && cd /app/dreamerv2 \
